Game Thread auto deletes after calling end()