@@ -2,6 +2,7 @@ package com.slimebot.games;
 
 import com.slimebot.main.Main;
 import net.dv8tion.jda.api.EmbedBuilder;
+import net.dv8tion.jda.api.entities.Message;
 import net.dv8tion.jda.api.entities.MessageEmbed;
 import net.dv8tion.jda.api.entities.channel.Channel;
 import net.dv8tion.jda.api.entities.channel.concrete.ThreadChannel;
@@ -13,6 +14,10 @@ import net.dv8tion.jda.api.requests.RestAction;
 import net.dv8tion.jda.api.requests.restaction.MessageCreateAction;
 import net.dv8tion.jda.api.requests.restaction.ThreadChannelAction;
 import net.dv8tion.jda.api.utils.TimeFormat;
+import net.dv8tion.jda.api.utils.messages.MessageCreateBuilder;
+import net.dv8tion.jda.api.utils.messages.MessageCreateData;
+import net.dv8tion.jda.api.utils.messages.MessageEditBuilder;
+import net.dv8tion.jda.api.utils.messages.MessageEditData;
 
 import java.util.*;
 import java.util.concurrent.TimeUnit;
@@ -53,18 +58,19 @@ public abstract class Game <T extends GamePlayer> extends ListenerAdapter {
     public void sendJoinMessageInThread(ThreadChannelAction action) {
         action.flatMap(channel -> {
             this.channelId = channel.getIdLong();
-
-            return sendMessageEmbeds(buildJoinEmbed()
-                    .addField(":alarm_clock: ....", " ", true)
-                    .build())
-                    .setActionRow(
-                            playersCanJoin
-                                    ? Button.primary(uuid + ":join", "Join")
-                                    : Button.primary(uuid + ":join", "Join").asDisabled(),
-                            Button.danger(uuid + ":leave", "Leave"),
-                            Button.primary(uuid + ":start", "Start")
-                    );
+            return sendMessage(buildJoinMessage());
         }).queue();
+    }
+
+    private MessageCreateData buildJoinMessage() {
+        return new MessageCreateBuilder().setEmbeds(buildJoinEmbed()
+                .addField(":alarm_clock: Automatisch Löschen", TimeFormat.RELATIVE.after(15*60*1000).toString(), true)
+                .build())
+                .setActionRow(
+                        Button.primary(uuid + ":join", "Join").withDisabled(!playersCanJoin),
+                        Button.danger(uuid + ":leave", "Leave"),
+                        Button.primary(uuid + ":start", "Start")
+                ).build();
     }
 
     public Optional<T> getPlayerFromId(long id) {
@@ -105,6 +111,8 @@ public abstract class Game <T extends GamePlayer> extends ListenerAdapter {
 
         players.forEach(p -> PlayerGameState.releasePlayer(p.id));
         players = null;
+
+        if(getChannel() != null) getChannel().delete().queueAfter(3, TimeUnit.MINUTES);
     }
 
     public ThreadChannel getChannel() {
@@ -113,6 +121,10 @@ public abstract class Game <T extends GamePlayer> extends ListenerAdapter {
 
     public MessageCreateAction sendMessage(String content) {
         return getChannel().sendMessage(content);
+    }
+
+    public MessageCreateAction sendMessage(MessageCreateData message) {
+        return getChannel().sendMessage(message);
     }
 
     public MessageCreateAction sendMessageEmbeds(Collection<MessageEmbed> embeds) {
@@ -143,11 +155,11 @@ public abstract class Game <T extends GamePlayer> extends ListenerAdapter {
                 }
                 event.editMessageEmbeds(buildJoinEmbed().build()).queue();
 
-                sendMessage("<@" + event.getMember().getId() + "> ist dem Spiel beigetreten!").queue();
+                sendMessage(event.getMember().getAsMention() + " ist dem Spiel beigetreten!").queue();
                 return;
             }
             case "leave" -> {
-                if (!players.contains(event.getMember().getIdLong())) {
+                if (getPlayerFromId(event.getMember().getIdLong()).isEmpty()) {
                     event.reply(":x: Du bist nicht im Game!").setEphemeral(true).queue();
                     return;
                 }
@@ -160,7 +172,7 @@ public abstract class Game <T extends GamePlayer> extends ListenerAdapter {
 
                 event.editMessageEmbeds(buildJoinEmbed().build()).queue();
 
-                event.reply(":x: <@" + event.getMember().getId() + "> hat das Spiel verlassen!").queue();
+                event.reply(":x: " + event.getMember().getAsMention() + " hat das Spiel verlassen!").queue();
 
             }
         }
@@ -175,7 +187,7 @@ public abstract class Game <T extends GamePlayer> extends ListenerAdapter {
                     event.reply(":x: Es müssen mindestens " + minPlayers + " Spieler:innen mit machen!").setEphemeral(true).queue();
                     return;
                 }
-                event.editComponents(event.getMessage().getComponents().stream().map(c -> c.asDisabled()).collect(Collectors.toList())).queue();
+                event.editComponents(event.getMessage().getComponents().stream().map(c -> c.asDisabled()).toList()).queue();
                 start();
             }
         }
